<resources>
    <string name="app_version">Version 1.0.0</string>
    
    <!-- App name, Init -->
    <string name="app_name">개발다봐</string>
    <string name="init_header_first">DEV</string>
    <string name="init_header_second">LOOKS</string>
    <string name="init_header_third">Look At ALL</string>
    <string name="login">로그인</string>
    <string name="register">가입하기</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu -->
    <string name="action_search">검색</string>
    <string name="action_logout">로그아웃</string>
    <string name="action_setting">개인정보 설정</string>
    <string name="action_share">콘텐츠 공유</string>
    <string name="action_copy">URL 복사</string>
    <string name="action_content_favorites">즐겨찾기 추가</string>

    <!-- PopupMenu -->
    <string name="title">제목</string>
    <string name="share">공유</string>

    <!-- Navigation -->
    <string name="title_home">Home</string>
    <string name="title_category">카테고리</string>
    <string name="nav_group_menu_icon">그룹메뉴아이콘</string>
    <string name="nav_child_menu_icon">자식메뉴아이콘</string>

    <!-- Search -->
    <string name="search">검색하기</string>
    <string name="required_search_value">자료를 검색해 주세요.</string>
    <string name="empty_search_value">자료가 존재하지 않습니다.</string>
    <string name="require_search">검색어를 입력해 주세요.</string>

    <!-- Bottom Navigation Category -->
    <string name="android">Android</string>
    <string name="java">Java</string>
    <string name="javascript">JavaScript</string>
    <string name="python">Python</string>
    <string name="php">PHP</string>
    <string name="etc">ETC</string>

    <!-- Main -->
    <string name="main_image_view">카드뷰 메인화면 이미지</string>
    <string name="explain_permission">자료를 가져오기 위해선 인터넷을 사용해야 하므로 권한이 필요합니다.\n인터넷 권한을 허용해주세요.</string>
    <string name="onOffMix_attend">명 신청가능</string>

    <!-- Sub -->
    <string name="load_error">데이터를 불러오는데 실패하였습니다.</string>

    <!-- Toast Message -->
    <string name="dismiss_activity">"\"뒤로\"버튼을 한번 더 누르시면 종료됩니다."</string>
    <string name="complete_to_copy">해당 게시물의 주소 복사에 성공하였습니다.</string>
    <string name="from_devLooks">"\"개발다봐\"에서 "</string>
    <string name="share_data">님이 자료를 공유하였습니다.</string>

    <!-- ProgressDialog Message -->
    <string name="loadingHomeData">즐겨찾기 및 신규 데이터를 불러오고 있습니다.</string>
    <string name="loading">데이터를 불러오고 있습니다.</string>

    <!-- Register -->
    <string name="username">Username</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="phone">Phone</string>
    <string name="register_username">영문, 숫자만 허용(4~20자)</string>
    <string name="register_email">이메일 주소</string>
    <string name="register_password">영문, 숫자, 특수문자(6자 이상)</string>
    <string name="register_password_confirm">비밀번호 재확인</string>
    <string name="register_phone">휴대폰 번호("-"자 제외)</string>
    <string name="error_invalid_username">사용자 이름은 영문, 숫자 4자 이상이어야 합니다.</string>
    <string name="error_invalid_password_confirm">입력한 비밀번호가 일치하지 않습니다.</string>
    <string name="error_invalid_phone">휴대폰 번호 형식이 올바르지 않습니다.</string>
    <string name="action_sign_up">가입완료</string>
    <string name="complete_to_sign_up">회원가입에 성공했습니다.</string>

    <!-- Setting -->
    <string name="update_user_info">수정하기</string>
    <string name="delete_user_info">탈퇴하기</string>
    <string name="original_password">Original Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_confirm">New Password Confirm</string>
    <string name="for_delete">삭제 하시려면 </string>
    <string name="required_input_email_text_same">을 똑같이 입력해주세요.</string>
    <string name="unmatched_value">값이 올바르지 않습니다.</string>
    <string name="okay">확인</string>
    <string name="cancel">취소</string>

    <!-- Login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="require_email">이메일을 입력해주세요.</string>
    <string name="require_password">비밀번호를 입력해주세요.</string>
    <string name="error_invalid_email">이메일 형식이 올바르지 않습니다.</string>
    <string name="error_invalid_password">비밀번호는 최소 6자리 이상이어야 합니다.</string>
    <string name="action_sign_in">개발다봐 시작</string>
    <string name="auto_login">자동 로그인</string>

    <!-- Community Name -->
    <string name="stack_overflow">Stack Overflow</string>
    <string name="okky_tech">OKKY Tech</string>
    <string name="okky_qna">OKKY Q <![CDATA[&]]> A</string>
    <string name="onOffMix">온오프믹스</string>

    <integer-array name="category_default_image">
        <item>@drawable/ic_stack_overflow_24dp</item>
        <item>@drawable/ic_okky_logo_24dp</item>
        <item>@drawable/ic_okky_logo_24dp</item>
    </integer-array>

    <string-array name="category_default_title">
        <item>Stack Overflow</item>
        <item>OKKY Tech</item>
        <item>OKKY Q <![CDATA[&]]> A</item>
    </string-array>

    <integer-array name="category_etc_image">
        <item>@drawable/ic_onoffmix_24dp</item>
    </integer-array>

    <string-array name="category_etc_title">
        <item>온오프믹스</item>
    </string-array>
</resources>
