<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:refreshType="material"
    tools:context="gachon.mobile.programming.android.finalproject.activities.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/defaultTextLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/username"/>

            <gachon.mobile.programming.android.finalproject.utils.ClearEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_username"
                android:inputType="text"
                android:maxLength="20" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/username_text_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text=" / 20"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/username_text_edited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/username_text_limit"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            style="@style/defaultTextLayout"
            android:layout_marginTop="@dimen/default_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/email"/>

            <gachon.mobile.programming.android.finalproject.utils.ClearEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_email"
                android:imeActionId="@+id/register"
                android:imeActionLabel="@string/email"
                android:imeOptions="actionUnspecified"
                android:inputType="textEmailAddress"
                android:maxLength="30" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/email_text_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text=" / 30"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/email_text_edited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/email_text_limit"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            style="@style/defaultTextLayout"
            android:layout_marginTop="@dimen/default_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/password"/>

            <gachon.mobile.programming.android.finalproject.utils.PasswordEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password"
                android:imeActionId="@+id/register"
                android:imeActionLabel="@string/password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLength="60" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/password_text_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text=" / 60"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/password_text_edited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/password_text_limit"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            style="@style/defaultTextLayout"
            android:layout_marginTop="@dimen/default_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/password_confirm"/>

            <gachon.mobile.programming.android.finalproject.utils.PasswordEditText
                android:id="@+id/password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password_confirm"
                android:imeActionId="@+id/register"
                android:imeActionLabel="@string/password_confirm"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLength="60" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/password_confirm_text_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text=" / 60"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/password_confirm_text_edited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/password_confirm_text_limit"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            style="@style/defaultTextLayout"
            android:layout_marginTop="@dimen/default_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/phone"/>

            <gachon.mobile.programming.android.finalproject.utils.ClearEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_phone"
                android:inputType="phone"
                android:maxLength="11" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/phone_text_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text=" / 11"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/phone_text_edited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/phone_text_limit"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/register_sign_up_button"
            style="@style/defaultButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_top"
            android:text="@string/action_sign_up" />
    </LinearLayout>
</ScrollView>
