<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:refreshType="material"
    tools:context="gachon.mobile.programming.android.finalproject.activities.RegisterActivity"
    tools:showIn="@layout/activity_setting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/defaultTextLayout"
            android:layout_marginTop="@dimen/default_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/email"/>

            <gachon.mobile.programming.android.finalproject.utils.ClearEditText
                android:id="@+id/setting_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/register_email"
                android:inputType="textEmailAddress"
                android:maxLength="30" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/setting_email_text_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text=" / 30"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/setting_email_text_edited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/setting_email_text_limit"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            style="@style/defaultTextLayout"
            android:layout_marginTop="@dimen/default_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/original_password"/>

            <gachon.mobile.programming.android.finalproject.utils.PasswordEditText
                android:id="@+id/setting_original_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:maxLength="60" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/setting_original_password_text_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text=" / 60"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/setting_original_password_text_edited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/setting_original_password_text_limit"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            style="@style/defaultTextLayout"
            android:layout_marginTop="@dimen/default_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/new_password"/>

            <gachon.mobile.programming.android.finalproject.utils.PasswordEditText
                android:id="@+id/setting_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:maxLength="60" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/setting_new_password_text_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text=" / 60"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/setting_new_password_text_edited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/setting_new_password_text_limit"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            style="@style/defaultTextLayout"
            android:layout_marginTop="@dimen/default_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/new_password_confirm"/>

            <gachon.mobile.programming.android.finalproject.utils.PasswordEditText
                android:id="@+id/setting_new_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password_confirm"
                android:inputType="textPassword"
                android:maxLength="60" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/setting_new_password_confirm_text_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text=" / 60"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/setting_new_password_confirm_text_edited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/setting_new_password_confirm_text_limit"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            style="@style/defaultTextLayout"
            android:layout_marginTop="@dimen/default_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/username"/>

            <gachon.mobile.programming.android.finalproject.utils.ClearEditText
                android:id="@+id/setting_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_username"
                android:inputType="text"
                android:maxLength="20" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/username_text_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text=" / 20"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/setting_username_text_edited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/username_text_limit"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            style="@style/defaultTextLayout"
            android:layout_marginTop="@dimen/default_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/phone"/>

            <gachon.mobile.programming.android.finalproject.utils.ClearEditText
                android:id="@+id/setting_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_phone"
                android:inputType="phone"
                android:maxLength="11" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/setting_phone_text_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text=" / 11"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/setting_phone_text_edited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/setting_phone_text_limit"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/confirm_update_info"
                style="@style/InitButton"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="10dp"
                android:layout_weight="0.5"
                android:text="@string/update_user_info" />

            <Button
                android:id="@+id/confirm_delete_info"
                style="@style/InitButton"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="3dp"
                android:layout_weight="0.5"
                android:text="@string/delete_user_info" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
