<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:refreshType="material"
    tools:context="gachon.mobile.programming.android.finalproject.activities.LoginActivity"
    tools:showIn="@layout/activity_login">

    <gachon.mobile.programming.android.finalproject.utils.ClearEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/require_email"
        android:inputType="textEmailAddress"
        android:maxLength="30" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/email_text_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text=" / 30"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/email_text_edited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/email_text_limit"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <gachon.mobile.programming.android.finalproject.utils.PasswordEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/require_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/login"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLength="60" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/password_text_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text=" / 60"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/password_text_edited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/password_text_limit"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/email_sign_in_button"
        style="@style/defaultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_button_margin_top"
        android:text="@string/action_sign_in" />
</LinearLayout>